package dev.kaldiroglu.dp.structural.proxy.gof;

/**
 * Position of a graphic on the page.
 */
public record Point(int x, int y) {
}
